Enhanced services and introduction

--- a/index.html
+++ b/index.html
@@ -36,126 +36,78 @@
 
             <section id="summary" class="summary">
                 <h2>Summary</h2>
-                <p>Leveraging my extensive background as a software engineer since 2008, I help clients accelerate the development of their websites and applications, ensuring they meet the highest standards.</p>
-                <p>My approach emphasizes a strong process, utilizing tools like code coverage, version control, and rapid prototyping to guarantee alignment with project goals. Committed to continuous growth, I am currently broadening my skills in cutting-edge areas including AI, automation, GIS, media production, product management, and UX/UI design.</p>
+                <p>Hi, I’m Carlos — a Python-AI developer and full-stack engineer with 18+ years of experience building scalable web solutions for industries like healthcare, geospatial, and government.</p>
+                <p>I help businesses turn complex challenges into smart, functional apps — from machine learning integrations to clean, responsive UI designs.</p>
+                <p>Whether you're a startup needing an MVP or a company looking to modernize legacy code, I bring structure, clarity, and results.</p>
             </section>
 
             <section id="services" class="services">
                 <h2>Services</h2>
                 <ul>
                     <li class="service">
-                        <span class="material-symbols-outlined">
-                            psychology
-                            </span>
+                        <span class="material-symbols-outlined">psychology</span>
                         <h4>Smart Home, A.I and Automation</h4>
-                        <ul>
-                            <li>
-                                <span class="material-symbols-outlined">smart_toy</span>
-                                <span>Python A.I.</span>
-                            </li>
-                            <li>
-                                <span class="material-symbols-outlined">auto_mode</span>
-                                <span>Web scrappers, filesystem automation</span>
-                            </li>
-                            <li>
-                                <span class="material-symbols-outlined">wb_incandescent</span>
-                                <span>Google Assistant Applications</span>
-                            </li>
-                            <li>
-                                <span class="material-symbols-outlined">auto_awesome</span>
-                                <span>Gemini and Alexa Integrations</span>
-                            </li>
-                            <li>
-                                <span class="material-symbols-outlined">home</span>
-                                <span>Smart home</span>
-                            </li>
-                        </ul>
+                        <div class="service-description">
+                            <p>I create intelligent Python systems for home automation, voice assistants, and task automation. From Gemini to Google Assistant, I bring machine learning into everyday life.</p>
+                            <ul>
+                                <li><span class="material-symbols-outlined">smart_toy</span><span>Python A.I.</span></li>
+                                <li><span class="material-symbols-outlined">auto_mode</span><span>Web scrappers, filesystem automation</span></li>
+                                <li><span class="material-symbols-outlined">wb_incandescent</span><span>Google Assistant Applications</span></li>
+                                <li><span class="material-symbols-outlined">auto_awesome</span><span>Gemini and Alexa Integrations</span></li>
+                                <li><span class="material-symbols-outlined">home</span><span>Smart home</span></li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="service">
                         <span class="material-symbols-outlined">desktop_windows</span>
                         <h4>Web Responsive Applications</h4>
-                        <ul>
-                            <li>
-                                <img src="images/angular-16.svg" alt="angular logo">
-                                <span>Angular, Google Material, Auth 2.0, RxJS</span>
-                            </li>
-                            <li>
-                                <img src="images/react-16-svgrepo-com.svg" alt="react logo">
-                                <span>ReactJS, Vite, Bootstrap</span>
-                            </li>
-                            <li>
-                                <img src="images/nodejs02-svgrepo-com.svg" alt="nodejs logo">
-                                <span>NodeJS, Flexbox, Typescript, html5, css3</span>
-                            </li>
-                        </ul>
+                        <div class="service-description">
+                            <p>I build fast, mobile-first web apps using Angular, React, and Node. I ensure performance, accessibility, and elegant UIs tailored to your business goals.</p>
+                            <ul>
+                                <li><img src="images/angular-16.svg" alt="angular logo"><span>Angular, Google Material, Auth 2.0, RxJS</span></li>
+                                <li><img src="images/react-16-svgrepo-com.svg" alt="react logo"><span>ReactJS, Vite, Bootstrap</span></li>
+                                <li><img src="images/nodejs02-svgrepo-com.svg" alt="nodejs logo"><span>NodeJS, Flexbox, Typescript, html5, css3</span></li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="service">
                         <span class="material-symbols-outlined">terminal</span>
                         <h4>Web Services Restful Apps</h4>
-                        <ul>
-                            <li>
-                                <img src="images/python-16-svgrepo-com.svg" alt="python logo">
-                                <span>Python (2 & 3), Redis, Chroma</span>
-                            </li>
-                            <li>
-                                <img src="images/dotnet-svgrepo-com.svg" alt="dotnet logo">
-                                <span>C# (core 3.1 & framework 5), MSSQL, CosmosDB</span>
-                            </li>
-                            <li>
-                                <img src="images/java-16-svgrepo-com.svg" alt="java logo">
-                                <span>Java (7 & 8), Oracle, PostgreSQL</span>
-                            </li>
-                            <li>
-                                <img src="images/php-16-svgrepo-com.svg" alt="php logo">
-                                <span>PHP 5, MySQL, SQLite</span>
-                            </li>
-                        </ul>
+                        <div class="service-description">
+                            <p>I create scalable RESTful APIs and backend services using .NET, Python, Java, and PHP — ready for complex integrations and high performance.</p>
+                            <ul>
+                                <li><img src="images/python-16-svgrepo-com.svg" alt="python logo"><span>Python (2 & 3), Redis, Chroma</span></li>
+                                <li><img src="images/dotnet-svgrepo-com.svg" alt="dotnet logo"><span>C# (core 3.1 & framework 5), MSSQL, CosmosDB</span></li>
+                                <li><img src="images/java-16-svgrepo-com.svg" alt="java logo"><span>Java (7 & 8), Oracle, PostgreSQL</span></li>
+                                <li><img src="images/php-16-svgrepo-com.svg" alt="php logo"><span>PHP 5, MySQL, SQLite</span></li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="service">
                         <span class="material-symbols-outlined">browser_updated</span>
                         <h4>Desktop Apps</h4>
-                        <ul>
-                            <li>
-                                <span class="material-symbols-outlined">extension</span>
-                                <span>Tkinter (Python)</span>
-                            </li>
-                            <li>
-                                <span class="material-symbols-outlined">view_list</span>
-                                <span>WPF apps (DotNet)</span>
-                            </li>
-                            <li>
-                                <span class="material-symbols-outlined">design_services</span>
-                                <span>Servlets (Java)</span>
-                            </li>
-                        </ul>
+                        <div class="service-description">
+                            <p>I design cross-platform desktop apps with Python, C#, or Java, tailored to business workflows with strong UI/UX and maintainable code.</p>
+                            <ul>
+                                <li><span class="material-symbols-outlined">extension</span><span>Tkinter (Python)</span></li>
+                                <li><span class="material-symbols-outlined">view_list</span><span>WPF apps (DotNet)</span></li>
+                                <li><span class="material-symbols-outlined">design_services</span><span>Servlets (Java)</span></li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="service">
-                        <span class="material-symbols-outlined">
-                            dashboard_customize
-                            </span>
+                        <span class="material-symbols-outlined">dashboard_customize</span>
                         <h4>CMS & Full Stack</h4>
-                        <ul>
-                            <li>
-                                <img src="images/adobe-svgrepo-com.svg" alt="adobe logo">
-                                <span>Adobe Experience Manager A.E.M.</span>
-                            </li>
-                            <li>
-                                <img src="images/drupal-svgrepo-com.svg" alt="drupal logo">
-                                <span>Drupal</span>
-                            </li>
-                            <li>
-                                <span class="material-symbols-outlined">gesture</span>
-                                <span>TeamSite</span>
-                            </li>
-                            <li>
-                                <img src="images/wordpress-svgrepo-com.svg" alt="wordpress logo">
-                                <span>WordPress</span>
-                            </li>
-                            <li>
-                                <img src="images/webflow-svgrepo-com.svg" alt="webflow logo">
-                                <span>Webflow</span>
-                            </li>
-                        </ul>
+                        <div class="service-description">
+                            <p>I deliver full-stack web solutions using popular CMS platforms, coupled with custom front- and back-end features — perfect for business sites, eCommerce, and internal tools.</p>
+                            <ul>
+                                <li><img src="images/adobe-svgrepo-com.svg" alt="adobe logo"><span>Adobe Experience Manager A.E.M.</span></li>
+                                <li><img src="images/drupal-svgrepo-com.svg" alt="drupal logo"><span>Drupal</span></li>
+                                <li><span class="material-symbols-outlined">gesture</span><span>TeamSite</span></li>
+                                <li><img src="images/wordpress-svgrepo-com.svg" alt="wordpress logo"><span>WordPress</span></li>
+                                <li><img src="images/webflow-svgrepo-com.svg" alt="webflow logo"><span>Webflow</span></li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
             </section>
