--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </ul>
             </section>
 
-            <section id="projects">
+            <section id="projects" class="projects">
                 <h2>Projects</h2>
                 <ul>
                     <li>
