styled titles on projects

--- a/index.html
+++ b/index.html
@@ -112,31 +112,31 @@
                 </ul>
             </section>
 
-            <section id="projects" class="projects">
+            <section id="projects" class="projects services">
                 <h2>Projects</h2>
                 <ul>
                     <li>
-                        <a href="https://github.com/carlosa-suarez/gis-jupyter/blob/main/geopandas.ipynb"><i class="geopandas"></i>Geopandas</a>
+                        <a href="https://github.com/carlosa-suarez/gis-jupyter/blob/main/geopandas.ipynb"><i class="geopandas"></i><h4>Geopandas</h4></a>
                         <p>This project consists in showcases the capabilities of Goepandas applied to GIS operations such geospatial references boundaries detection</p>
                     </li>
                     <li>
-                        <a href="https://github.com/carlosa-suarez/sandra"><i class="pdf"></i>PDF scrapper and CSV exporter</a>
+                        <a href="https://github.com/carlosa-suarez/sandra"><i class="pdf"></i><h4>Scrapper and CSV exporter</h4></a>
                         <p>This Django project showcases the skills to create Web Applications that can uploads PDF documents, scraps the content to read complaints, stores the records in SQLite, and exports the records in CSV format</p>
                     </li>
                     <li>
-                        <a href="https://github.com/BatteryDrain/scriptStudy/tree/api"><i class="text-to-speech"></i>Text to speech</a>
+                        <a href="https://github.com/BatteryDrain/scriptStudy/tree/api"><i class="text-to-speech"></i><h4>Text to speech</h4></a>
                         <p>Simple NodeJS application that integrates the ElevenLabs API to send the text to speech, using a custom endpoint to process the requests</p>
                     </li>
                     <li>
-                        <a href="https://github.com/carlosa-suarez/fhir-data"><i class="fhir"></i>FHIR Health Standard</a>
+                        <a href="https://github.com/carlosa-suarez/fhir-data"><i class="fhir"></i><h4>FHIR Health Standard</h4></a>
                         <p>Simple JS application to handle clinical patient data (HIPA) in the healthcare industry</p>
                     </li>
                     <li>
-                        <a href="https://github.com/carlosa-suarez/ng-inbox"><i class="angular"></i>Angular Inbox system</a>
+                        <a href="https://github.com/carlosa-suarez/ng-inbox"><i class="angular"></i><h4>Inbox system</h4></a>
                         <p>Created an Angular application to emulate an inbox system to handle and compose emails</p>
                     </li>
                     <li>
-                        <a href="https://github.com/carlosa-suarez"><i class="github"></i>Learn more...</a>
+                        <a href="https://github.com/carlosa-suarez"><i class="github"></i><h4>Learn more...</h4></a>
                         <p>Feel free to explore my repositories</p>
                     </li>
                 </ul>
